--- a/ThienNga2/Views/BaoGia/BaoGiaList.cshtml
+++ b/ThienNga2/Views/BaoGia/BaoGiaList.cshtml
@@ -50,7 +50,7 @@
                             @wact.tb_customer.customerName
                         </td>
                         <td>
-                            @wact.tb_customer.id
+                            @wact.tb_customer.phonenumber
                         </td>
                         }
                         else
