--- a/ThienNga2/Views/ProductItem/NewProductItem.cshtml
+++ b/ThienNga2/Views/ProductItem/NewProductItem.cshtml
@@ -405,6 +405,10 @@
 
                                     <label>Thành tiền @Html.TextBoxFor(Model => Model.items[i].thanhTienS, new { @class = "form-control", value = "0" })</label>
                                 </td>
+                                <td>
+
+                                    <label>Có bảo hành @Html.CheckBoxFor(Model => Model.items[i].warrantyAvailable, htmlAttributes: new { @checked = "checked" })</label>
+                                </td>
                                 @Html.HiddenFor(Model => Model.items[i].thanhTien, new { @class = "form-control", value = "0" })
                                 @*<td align="center">
                                     <img src="~/Content/images/red-delete-button-icon-62906.png" onclick="removeselect(@i)"/>
