--- a/ThienNga2/Views/KickHoatBaoHanh/index.cshtml
+++ b/ThienNga2/Views/KickHoatBaoHanh/index.cshtml
@@ -301,7 +301,7 @@
                             Ngày kích hoạt
                         </th>
                         <th>
-                            Thời hạn
+                            Thời hạn(Tháng)
                         </th>
                         <th>
                             Mô tả
